# ICalLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
dev-assets/: mini1.errors.ics  mini1.ics
dev-assets/f1calendar.com/: 2019_full.ics  2019_full.ics.indented.txt
include/: IcalParser.hh  ical.hh  icalstream.hh  parser.hh  parser_exceptions.hh  parser_helpers.hh  rfc3629.hh  rfc3986.hh  rfc4288.hh  rfc5234.hh  rfc5646.hh  xvariant.hh
src/: IcalParser.cc  ical.cc  icalstream.cc  main.cc  parser.cc  parser_helpers.cc  rfc3629.cc  rfc3986.cc  rfc4288.cc  rfc5234.cc  rfc5646.cc
